@@ -85,6 +85,9 @@ GstTTMLAttribute *gst_ttml_attribute_new_fraction (GstTTMLAttributeType type,
 GstTTMLAttribute *gst_ttml_attribute_new_styling_default (
     GstTTMLAttributeType type);
 
+void gst_ttml_attribute_normalize_length (const GstTTMLState *state,
+    GstTTMLAttribute *attr, int offset, int direction);
+
 gint gst_ttml_attribute_compare_type_func (GstTTMLAttribute *attr,
     GstTTMLAttributeType type);
 
